# rust-fastapi

./: .env  Cargo.toml  README.md
admin/: Cargo.toml
admin/assets/: app.js  index.html  styles.css
admin/config/: features.json
admin/src/: lib.rs
app/: Cargo.toml
app/src/: dynamic_loader.rs  features_loader.rs  main.rs  openapi.rs  router.rs  types.rs  util.rs  watcher.rs
features/cors/: Cargo.toml
features/cors/src/: lib.rs
features/oauth2/: Cargo.toml
features/oauth2/src/: lib.rs
features/rate_limit/: Cargo.toml
features/rate_limit/src/: lib.rs
features/waf/: Cargo.toml
features/waf/src/: lib.rs
module_utils/: Cargo.toml
module_utils/src/: lib.rs
modules/assets_css/: Cargo.toml
modules/assets_css/src/: app.css  lib.rs
modules/assets_html/: Cargo.toml
modules/assets_html/src/: index.html  lib.rs
modules/assets_js/: Cargo.toml
modules/assets_js/src/: app.js  lib.rs
modules/assets_json/: Cargo.toml
modules/assets_json/src/: data.json  lib.rs
modules/assets_text/: Cargo.toml
modules/assets_text/src/: lib.rs
modules/assets_xml/: Cargo.toml
modules/assets_xml/src/: data.xml  lib.rs
modules/greetings/: Cargo.toml
modules/greetings/src/: lib.rs
modules/hello/: Cargo.toml
modules/hello/src/: lib.rs
modules/math/: Cargo.toml
modules/math/src/: lib.rs
plugin_macro/: Cargo.toml
plugin_macro/src/: lib.rs
