[package]
name = "app"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
notify = "6.1"
parking_lot = "0.12"
walkdir = "2.5"
libloading = "0.8"
tower = { version = "0.5", features = ["limit"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
dotenvy = "0.15"
admin = { path = "../admin" }
once_cell = "1.19"
rate_limit = { path = "../features/rate_limit", default-features = false }
waf = { path = "../features/waf", default-features = false }
oauth2 = { path = "../features/oauth2", default-features = false }
cors = { path = "../features/cors", default-features = false }
similar = "2.2"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
